Fix some spacing
A comment that should have been in the last commit may also have snuck
in.

--- a/website/src/components/FilterInput/styles.css
+++ b/website/src/components/FilterInput/styles.css
@@ -7,5 +7,4 @@
   font-family: sans-serif;
   font-size: 1rem;
   padding: 0.5rem;
-  margin-bottom: 2rem;
 }
